[package]
authors = ["Godmode Galactus <gmgalactus@mango.markets>", "Maximilian Schneider <max@mango.markets>"]
edition = "2021"
name = "mango-simulation"
version = "1.10.26"
repository = "https://github.com/blockworks-foundation/mango-simulation"
license = "Apache-2.0"
homepage = "mango.markets"
publish = false

[dependencies]
anyhow = "1.0"
arrayref = "*"
async-std = "1.12.0"
async-channel = "1.6"
async-trait = "0.1.66"
borsh = "0.9.3"
bytemuck = "1.7.2"
chrono = "0.4.19"
clap = "2.33.1"
csv-async = "1.2"
dashmap = "5.4.0"
fixed = { version = ">=1.11.0, <1.12.0", features = ["serde"] }
fixed-macro = "^1.1.1"
futures = "0.3.17"
iter_tools = "0.1.4"
log = "0.4.14"
multiqueue = "^0.3.2"
rand = ">=0.8.5"
rayon = "1.5.1"
serde = "1.0.136"
serde_derive = "1.0.103"
serde_json = "1.0.79"
serde_yaml = "0.8.23"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
regex = "1.7.3"

solana-client = { git = "https://github.com/solana-labs/solana.git", tag="v1.15.2" }
solana-core = { git = "https://github.com/solana-labs/solana.git", tag="v1.15.2" }
solana-metrics = { git = "https://github.com/solana-labs/solana.git", tag="v1.15.2" }
solana-rpc = { git = "https://github.com/solana-labs/solana.git", tag="v1.15.2" }
solana-runtime = { git = "https://github.com/solana-labs/solana.git", tag="v1.15.2" }
solana-sdk = { git = "https://github.com/solana-labs/solana.git", tag="v1.15.2" }
solana-clap-utils = { git = "https://github.com/solana-labs/solana.git", tag="v1.15.2" }
solana-cli-config = { git = "https://github.com/solana-labs/solana.git", tag="v1.15.2" }
solana-net-utils = { git = "https://github.com/solana-labs/solana.git", tag="v1.15.2" }
solana-version = { git = "https://github.com/solana-labs/solana.git", tag="v1.15.2" }
solana-logger = { git = "https://github.com/solana-labs/solana.git", tag="v1.15.2" }
solana-transaction-status = { git = "https://github.com/solana-labs/solana.git", tag="v1.15.2" }
solana-quic-client = { git = "https://github.com/solana-labs/solana.git", tag="v1.15.2" }
solana-account-decoder = { git = "https://github.com/solana-labs/solana.git", tag="v1.15.2" }


# pin program to mango-v3 version of solana sdk
# now we can use sdk for recent version and program for legacy
# we have a bunch of helpers to convert between the two explicitly
solana-program = "1.9.17"

mango = { git = "https://github.com/blockworks-foundation/mango-v3.git", tag = "v3.6.0", default-features = false }
mango-common = { git = "https://github.com/blockworks-foundation/mango-v3.git", tag = "v3.6.0" }
mango-feeds-connector = { git = "https://github.com/blockworks-foundation/mango-feeds.git", branch = "ckamm/solana-versions2", default-features = false, features = ["solana-1-15"] }
bincode = "1.3.3"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

